# tempmon

./: .gitignore  Cargo.toml  Justfile  README.md  tempmon.service  tempmon_sample_config.toml
src/: config.rs  ds18b20.rs  main.rs  w1_errors.rs
